# ppo-from-scratch

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: atari.yaml  classic.yaml  mujoco.yaml
docs/: details.md
ppo/: __init__.py  ppo.py  ppo_atari.py  ppo_continuous.py
tests/: test_gae.py
